--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,13 +1,14 @@
 # Nixpacks configuration for Railway
-# Builds both frontend and backend in a single deployment
+# Builds both frontend and backend
 
 [phases.setup]
-nixPkgs = ["nodejs-18_x", "python311"]
+nixPkgs = ["nodejs_20", "python311"]
 
 [phases.install]
 cmds = [
     "cd frontend && npm ci",
-    "cd backend && python -m venv venv && . venv/bin/activate && pip install -r requirements.txt"
+    "python -m venv /app/venv",
+    ". /app/venv/bin/activate && pip install --upgrade pip && pip install -r backend/requirements.txt"
 ]
 
 [phases.build]
@@ -16,4 +17,4 @@ cmds = [
 ]
 
 [start]
-cmd = "cd backend && . venv/bin/activate && python -m uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}"
+cmd = ". /app/venv/bin/activate && cd backend && python -m uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}"
