--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -27,6 +27,7 @@ python-escpos==3.1
 python-dotenv==1.0.0
 pydantic==2.5.3
 pydantic-settings==2.1.0
+email-validator==2.1.0
 httpx==0.26.0
 aiofiles==23.2.1
 
