WhatsApp Bot: Evolution API integration with 2-way messaging, webhooks, and bot commands

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -27,3 +27,10 @@ SILENT_PRINT_ENABLED=true
 # File Storage
 UPLOAD_DIR=./uploads
 MAX_UPLOAD_SIZE_MB=10
+
+# Evolution API (WhatsApp Bot) - FREE & UNLIMITED
+# Deploy Evolution API on Railway, then set these values
+EVOLUTION_API_URL=https://your-evolution-api.railway.app
+EVOLUTION_API_KEY=your-evolution-api-key
+EVOLUTION_INSTANCE_NAME=kadaigpt
+WHATSAPP_VERIFY_TOKEN=kadaigpt_verify_token
