Rebrand to KadaiGPT + Add WhatsApp AI Agent for Railway deployment

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,16 +1,16 @@
-# VyaparAI Environment Configuration
+# KadaiGPT Environment Configuration
 
 # App Settings
-APP_NAME=VyaparAI
+APP_NAME=KadaiGPT
 APP_ENV=development
 DEBUG=True
-SECRET_KEY=vyaparai-super-secret-key-change-in-production-2026
+SECRET_KEY=KadaiGPT-super-secret-key-change-in-production-2026
 
 # Database
-DATABASE_URL=sqlite+aiosqlite:///./vyapar_ai.db
+DATABASE_URL=sqlite+aiosqlite:///./kadaigpt.db
 
 # JWT Settings
-JWT_SECRET_KEY=vyaparai-jwt-secret-key-2026
+JWT_SECRET_KEY=KadaiGPT-jwt-secret-key-2026
 JWT_ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=1440
 
