--- a/whatsapp-gateway/package.json
+++ b/whatsapp-gateway/package.json
@@ -11,6 +11,7 @@
         "@whiskeysockets/baileys": "^6.6.0",
         "axios": "^1.13.4",
         "pino": "^8.17.0",
+        "qrcode": "^1.5.4",
         "qrcode-terminal": "^0.12.0"
     },
     "engines": {
