feat: migrate from Railway to Vercel deployment + SaaS infrastructure
- Add vercel.json with serverless Python + static frontend config
- Add api/index.py as Vercel serverless entry point
- Update config.py: Neon PostgreSQL support, POSTGRES_URL, SSL mode
- Update database.py: serverless-optimized connection pooling
- Update requirements.txt: remove heavy packages (opencv, escpos), add mangum
- Replace all Railway URLs with Vercel URLs (email, telegram, CORS)
- Add subscription models, engine, and API router (4-tier SaaS)
- Add GST compliance engine and router (GSTR-1/3B, HSN codes)
- Add credit management engine and router (AI scoring, multilingual reminders)
- Add data encryption utility (Fernet field-level encryption)
- Add PWA Service Worker with offline caching strategies
- Add IndexedDB offline engine for frontend
- Add comprehensive DEPLOYMENT_GUIDE.md
- Frontend: remove hardcoded Railway WhatsApp URL, use env var

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ __pycache__/
 # Environment
 .env
 .env.local
+.env.production.local
 .venv/
 venv/
 ENV/
@@ -37,6 +38,10 @@ logs/
 htmlcov/
 coverage/
 
+# Build output
+frontend/dist/
+build/
+
 # Cache
 .cache/
 
@@ -44,3 +49,14 @@ coverage/
 *.tmp
 build_output.txt
 error.log
+
+# Vercel
+.vercel/
+
+# WhatsApp auth (sensitive)
+whatsapp-gateway/auth_info/
+whatsapp-gateway/auth_base64.txt
+whatsapp-gateway/creds_base64.txt
+
+# Uploads
+uploads/
