--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,13 +2,13 @@
 fastapi==0.109.0
 uvicorn[standard]==0.27.0
 python-multipart==0.0.6
+mangum==0.17.0
 
-# Database
+# Database (Neon PostgreSQL on Vercel)
 sqlalchemy==2.0.25
 alembic==1.13.1
 aiosqlite==0.19.0
 asyncpg==0.29.0
-psycopg2-binary==2.9.9
 
 # Authentication
 python-jose[cryptography]==3.3.0
@@ -18,12 +18,6 @@ bcrypt==4.1.2
 # AI and OCR
 google-generativeai==0.3.2
 pillow==10.2.0
-pytesseract==0.3.10
-opencv-python==4.9.0.80
-
-# PDF and Printing
-reportlab==4.0.9
-python-escpos==3.1
 
 # Utilities
 python-dotenv==1.0.0
@@ -33,9 +27,8 @@ email-validator==2.1.0
 httpx==0.26.0
 aiofiles==23.2.1
 
-# Task Queue (for background jobs)
-celery==5.3.4
-redis==5.0.1
+# Security
+cryptography==42.0.2
 
 # WebSocket for real-time
 websockets==12.0
