--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
     "buildCommand": "cd frontend && npm install && npm run build",
     "outputDirectory": "frontend/dist",
     "framework": null,
+    "installCommand": "pip install -r requirements.txt",
     "rewrites": [
         {
             "source": "/api/:path(.*)",
@@ -12,7 +13,6 @@
     ],
     "functions": {
         "api/index.py": {
-            "runtime": "@vercel/python@4.0.0",
             "maxDuration": 30,
             "memory": 1024
         }
