--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,6 @@
     "buildCommand": "cd frontend && npm install && npm run build",
     "outputDirectory": "frontend/dist",
     "framework": null,
-    "installCommand": "pip install -r requirements.txt",
     "rewrites": [
         {
             "source": "/api/:path(.*)",
@@ -13,6 +12,7 @@
     ],
     "functions": {
         "api/index.py": {
+            "runtime": "@vercel/python@3.1.1",
             "maxDuration": 30,
             "memory": 1024
         }
