--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,36 +1,41 @@
 # FastAPI and Server
-fastapi==0.115.0
-uvicorn[standard]==0.32.0
-python-multipart==0.0.12
+fastapi==0.109.0
+uvicorn[standard]==0.27.0
+python-multipart==0.0.6
 
-# Database (Neon PostgreSQL on Vercel)
-sqlalchemy==2.0.36
-alembic==1.14.0
-aiosqlite==0.20.0
-asyncpg==0.30.0
+# Database
+sqlalchemy==2.0.25
+alembic==1.13.1
+aiosqlite==0.19.0
+asyncpg==0.29.0
+psycopg2-binary==2.9.9
 
 # Authentication
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-bcrypt==4.2.1
+bcrypt==4.1.2
 
 # AI and OCR
-google-generativeai==0.8.3
-pillow==11.1.0
+google-generativeai==0.3.2
+pillow==10.2.0
+pytesseract==0.3.10
+
+# PDF and Printing
+reportlab==4.0.9
 
 # Utilities
-python-dotenv==1.0.1
-pydantic==2.10.0
-pydantic-settings==2.6.1
-email-validator==2.2.0
-httpx==0.28.0
-aiofiles==24.1.0
+python-dotenv==1.0.0
+pydantic==2.5.3
+pydantic-settings==2.1.0
+email-validator==2.1.0
+httpx==0.26.0
+aiofiles==23.2.1
 
 # Security
-cryptography==44.0.0
+cryptography==42.0.2
 
 # WebSocket for real-time
-websockets==14.1
+websockets==12.0
 
 # Date/Time
-python-dateutil==2.9.0
+python-dateutil==2.8.2
