--- a/render.yaml
+++ b/render.yaml
@@ -35,7 +35,8 @@ services:
   - type: web
     name: kadaigpt-whatsapp
     runtime: docker
-    dockerfilePath: ./whatsapp-gateway/Dockerfile
+    rootDir: whatsapp-gateway
+    dockerfilePath: ./Dockerfile
     region: singapore
     plan: free
     envVars:
