feat: Add 24/7 uptime system - self-ping keep-alive + warmup UI + enhanced health endpoint
- Backend: KeepAliveService self-pings /api/health every 10 min (prevents Render sleep)
- Backend: Enhanced /api/health with uptime, DB status, keepalive stats
- Backend: Added /api/ping endpoint for external monitors (UptimeRobot)
- Backend: Scheduler + keepalive auto-start on app lifespan
- Frontend: BackendWarmupService with retry logic for cold starts
- Frontend: Beautiful loading screen shows warmup progress during cold starts
- Docs: Updated deployment guide with 3-layer uptime strategy

--- a/render.yaml
+++ b/render.yaml
@@ -29,6 +29,8 @@ services:
         sync: false
       - key: PORT
         value: "8000"
+      - key: RENDER_EXTERNAL_URL
+        value: "https://kadaigpt.onrender.com"
     healthCheckPath: /api/health
 
   # ── WhatsApp Baileys Bot (Persistent Process) ──
